stylesheet.css
* {
    box-sizing: border-box;
}

#topheader {
    width: 100%;
    background-color: #00b3b3;
    color: #e6ffff;
    font-family: 'Work Sans', sans-serif;
    position: sticky;
    line-height: 72px;
}

p {
    font-size: .95em;
    text-indent: 1em;
    max-width: 100%;
}

#description {
    padding-left: 6px;
    padding-right: 6px;
}

h1 {
    text-align: center;
    margin-top: 0;
    font-size: 36px;
    position: relative;
    display: block;
}

body {
    background-color: #c1f0f0;
    font-family: 'Varela Round', sans-serif;
    line-height: 1.6;
    color: #3a3a3a;
    text-align: justify;
    ;
    margin: 0 0;
}

form {
    margin: 10px auto;
    padding: 10px 20px;
    border-radius: 8px;
    width: 100%;
}

.buttons {
    background: rgba(255, 255, 255, 0.1);
    border: none;
    font-size: 1.5em;
    line-height: 2em;
    height: auto;
    margin: 0;
    width: 100%;
    background-color: #b3cccc;
    color: #009999;
    font-weight: bold;
    text-align: center;
    display: inline-block;
    border-radius: 4px;
    padding: 0 12px;
    cursor: pointer;
}

.buttons:hover {
    cursor: pointer;
}

tr {
    height: 50px;
    border: solid red 2px;
}

td {
    max-width: 100%;
    border: solid black 1px;
}

table {
    border: solid black 1px;
    width: 100%;
}

input[type="text"], input[type="number"] {
    background: rgba(255, 255, 255, 0.1);
    border: solid #28a4a4 1px 20%;
    font-size: 14px;
    height: auto;
    margin: 0;
    outline: 0;
    padding: 15px;
    width: 100%;
    background-color: #d6f5f5;
    color: #8a97a0;
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
    margin-bottom: 10px;
    align-content: center;
}

label {
    display: block;
    padding-bottom: 4px;
    padding-top: 4px;
}

fieldset {
    max-width: 90%;
    text-align: center;
    margin-bottom: 10px;
    border: none;
}

.errors {
    text-align: left;
    text-indent: 10%;
    color: #a40000;
    font-size: 12px;
}


/*meta tag*/

@-ms-viewport {
    width: device-width;
}


/*Media Queries*/

@media only screen and (min-width: 769px) {
    .buttons, input[type="text"], input[type="number"], label {
        /*max-width: 30%;*/
        /*display: inline-flex;*/
    }
    fieldset {
        display: inline-block;
        ;
        width: 30%;
        vertical-align: top;
    }
    form {
        margin: 0 0;
        padding: 0 0;
    }
}

@media only screen and (max-width: 768px) {
    td:nth-child(1n+6) {
        display: none;
    }
}

